--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
                         <div class="liquid-glass p-12 border-amber-500/10 hover:border-amber-500/40 text-center">
                             <div class="text-7xl mb-6 hover:scale-110 transition-transform cursor-default inline-block">✉️</div>
                             <h3 class="text-3xl font-black mb-3">راسلنا مباشرة</h3>
-                            <p class="text-amber-400 font-medium mb-10">info@qkwip.org</p>
+                            <p class="text-amber-400 font-medium mb-10">Quran.Kareem.word.in.picture@gmail.com</p>
                             <button class="gold-button w-full py-5 rounded-2xl uppercase tracking-widest text-xs font-black">ابدأ المراسلة الآن</button>
                         </div>
                     </div>
@@ -343,3 +343,4 @@
 
 </body>
 </html>
+
