--- a/index.html
+++ b/index.html
@@ -231,12 +231,13 @@
 
             <nav class="nav-links hidden sm:flex">
                 <span onclick="scrollToSection('home')" class="nav-item">الرئيسية</span>
+                <span onclick="scrollToSection('game')" class="nav-item">إلعب</span>
                 <span onclick="scrollToSection('parts')" class="nav-item">الأجزاء</span>
                 <span onclick="scrollToSection('policies')" class="nav-item">السياسات</span>
                 <span onclick="scrollToSection('contact')" class="nav-item">تواصل</span>
             </nav>
 
-            <div id="pill" onclick="goToCurrentPart()" class="px-5 py-1.5 bg-white text-black rounded-full font-black text-[12px] shadow-xl min-w-[45px] text-center">1</div>
+            <div style="display:none;" id="pill" onclick="goToCurrentPart()" class="px-5 py-1.5 bg-white text-black rounded-full font-black text-[12px] shadow-xl min-w-[45px] text-center">1</div>
         </div>
 
         <div id="header-expansion-area" class="header-content-area">
@@ -333,6 +334,26 @@
             <a href="mailto:quran.kareem.word.in.picture@gmail.com" class="social-card p-8 rounded-[40px] text-center">
                 <div class="mb-4 flex justify-center text-amber-500"><svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"></path></svg></div>
                 <span class="text-[9px] font-black uppercase tracking-widest">Email</span>
+            </a>
+        </div>
+    </section>
+    
+    <section id="game" class="py-32 px-6 max-w-5xl mx-auto" data-aos="fade-up">
+        <div class="text-center mb-16">
+            <h2 class="text-4xl font-black mb-4">إلعب واختبر ذاكرتك</h2>
+            <p class="opacity-30"></p>
+        </div>
+        <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4">
+            <a href="memomatch.html" target="_blank" class="social-card p-8 rounded-[40px] text-center">
+                <div class="mb-4 flex justify-center text-blue-500"><svg class="w-8 h-8" fill="currentColor" viewBox="0 0 24 24"><path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"/></svg></div>
+                <span class="text-[20px] font-black uppercase tracking-widest">لعبة الذاكرة</span>
+            </a>
+            <a href="WordBank.html" target="_blank" class="social-card p-8 rounded-[40px] text-center">
+                <div class="mb-4 flex justify-center text-red-500"><svg class="w-8 h-8" fill="currentColor" viewBox="0 0 24 24"><path d="M23.498 6.186a3.016 3.016 0 0 0-2.122-2.136C19.505 3.545 12 3.545 12 3.545s-7.505 0-9.377.505A3.017 3.017 0 0 0 .502 6.186C0 8.07 0 12 0 12s0 3.93.502 5.814a3.016 3.016 0 0 0 2.122 2.136c1.871.505 9.376.505 9.376.505s7.505 0 9.377-.505a3.015 3.015 0 0 0 2.122-2.136C24 15.93 24 12 24 12s0-3.93-.502-5.814zM9.545 15.568V8.432L15.818 12l-6.273 3.568z"/></svg></div>
+                <span class="text-[20px] font-black uppercase tracking-widest">بنك الكلمات</span>
+            </a>
+            <a href="quiz.html" target="_blank" class="social-card p-8 rounded-[40px] text-center">
+                <span class="text-[20px] font-black uppercase tracking-widest">امتحان الذاكرة</span>
             </a>
         </div>
     </section>
@@ -538,5 +559,6 @@
     </style>
 </body>
 </html>
+
 
 
