--- a/index.html
+++ b/index.html
@@ -350,6 +350,9 @@
             <a href="WordBank.html" target="_blank" class="social-card p-8 rounded-[40px] text-center">
                  <span class="text-[20px] font-black uppercase tracking-widest">بنك الكلمات</span>
             </a>
+             <a href="quiz.html" target="_blank" class="social-card p-8 rounded-[40px] text-center">
+                 <span class="text-[20px] font-black uppercase tracking-widest">إختبار الذاكرة</span>
+            </a>
         </div>
     </section>
 
@@ -554,6 +557,7 @@
     </style>
 </body>
 </html>
+
 
 
 
