--- a/quiz.html
+++ b/quiz.html
@@ -272,9 +272,7 @@
             { q: "كم عدد أجزاء القرآن الكريم؟", options: ["٢٠", "٢٥", "٣٠", "٤٠"], correct: 2, prompt: "Thirty glowing golden books stacked neatly on a dark wooden table" },
             { q: "ما هي السورة التي تسمى 'قلب القرآن'؟", options: ["الفاتحة", "يس", "الرحمن", "الإخلاص"], correct: 1, prompt: "A glowing heart shape made of light within a spiritual library setting" },
             { q: "بأي لغة نزل القرآن الكريم؟", options: ["الفارسية", "العبرية", "العربية", "السريانية"], correct: 2, prompt: "Ancient parchment with beautiful Arabic calligraphy, ink and quill, warm light" },
-            { q: "ما هي السورة التي تنتهي بأسماء نبِيين؟", options: ["الأعلى", "الشمس", "الليل", "الفجر"], correct: 0, prompt: "Two stars shining brightly in the night sky over a silhouette of a mosque" },
-            { q: "كم مرة ذكر اسم 'محمد' صلى الله عليه وسلم في القرآن؟", options: ["٣ مرات", "٤ مرات", "٥ مرات", "٦ مرات"], correct: 1, prompt: "The name Muhammad written in glowing gold calligraphy on a deep teal background" },
-            { q: "ما هي السورة التي تسمى 'سورة النعم'؟", options: ["النحل", "البقرة", "يس", "الرحمن"], correct: 0, prompt: "Beehive in a blooming garden, honey dripping, abundance of nature" },
+            { q: "ما هي السورة التي تنتهي بأسماء نبِييْن؟", options: ["الأعلى", "الشمس", "الليل", "الفجر"], correct: 0, prompt: "Two stars shining brightly in the night sky over a silhouette of a mosque" },
             { q: "ما هي أطول آية في القرآن الكريم؟", options: ["آية الكرسي", "آية الدين", "آية المداينة", "آية البر"], correct: 1, prompt: "Ancient scrolls with long text, quill and ink, warm light, judicial atmosphere" },
             { q: "في أي سورة وردت 'سجدتان'؟", options: ["الحج", "الفرقان", "النجم", "العلق"], correct: 0, prompt: "Crowd of people in prayer position, silhouette against a bright sunset" }
         ];
