--- a/index.html
+++ b/index.html
@@ -232,6 +232,7 @@
             <nav class="nav-links hidden sm:flex">
                 <span onclick="scrollToSection('home')" class="nav-item">الرئيسية</span>
                 <span onclick="scrollToSection('game')" class="nav-item">إلعب</span>
+                <a href="mushaf.html" class="nav-item">المصحف</a>
                 <span onclick="scrollToSection('parts')" class="nav-item">الأجزاء</span>
                 <span onclick="scrollToSection('policies')" class="nav-item">السياسات</span>
                 <span onclick="scrollToSection('contact')" class="nav-item">تواصل</span>
@@ -557,6 +558,7 @@
     </style>
 </body>
 </html>
+
 
 
 
